[package]
name = "xeet"
version = "0.1.0"
edition = "2021"
authors = ["Xeet Developer"]
description = "A terminal app to tweet from your command line"

[dependencies]
twitter-v2 = "0.1.8"
tokio = { version = "1.28.0", features = ["full"] }
clap = { version = "4.3.0", features = ["derive"] }
colored = "2.0.0"
anyhow = "1.0.71"
toml = "0.8"
chrono = "0.4"
